--- a/inst/template/full/main-script.Rmd
+++ b/inst/template/full/main-script.Rmd
@@ -59,8 +59,13 @@ ipak <- function(pkg){
 }
 
 ipak(packages_list <- c(
-                       "devtools",
-                       "bibtex",
+                       "devtools",  # required; do not exclude from this list
+                       "bibtex",    # required; do not exclude from this list
+                       "knitr",     # required; do not exclude from this list
+                       "rmarkdown", # required; do not exclude from this list
+                       "pacman",    # required; do not exclude from this list
+                       "captioner", # required; do not exclude from this list
+                       "git2r",     # required; do not exclude from this list
                        "vegan",
                        "tidyverse",
                        "betapart",
@@ -70,20 +75,17 @@ ipak(packages_list <- c(
                        "data.table",
                        "phytools",
                        "brranching",
-                       "picante",
-                       "knitr", 
-                       "pacman",
-                       "captioner"
-                   )
+                       "picante"
+                      )
      )
 
 pacman::p_load_gh(char = c(
-                           "crsh/citr", 
+                           # required; do not exclude from this list
                            "benmarwick/wordcountaddin",
-                           "ropensci/rcrossref",
-                           "sylvainschmitt/Cite"
-                           ), 
-                  install = TRUE, 
+                           # required; do not exclude from this list
+                           "ropensci/rcrossref"
+                           ),
+                  install = TRUE,
                   dependencies = TRUE)
 
 write.bib(packages_list, "manuscript/sources/installed-r-packages.bib")
@@ -107,7 +109,7 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit [@Vellend2001] in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ##### page break
 
@@ -118,7 +120,7 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit [@Vellend2001] in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ##### page break
 
@@ -129,7 +131,7 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit [@Vellend2001] in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ##### page break
 
@@ -140,7 +142,7 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit [@Vellend2001] in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ##### page break
 
@@ -151,7 +153,7 @@ tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit [@Vellend2001] in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ##### page break
 
@@ -159,11 +161,11 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ```{r eval = TRUE, echo = FALSE, results='asis'}
 cite_pkg <- function(pkg_list) {
-  
+
   packages <- sort(pkg_list)
   cites <- lapply(packages, utils::citation)
   cites.bib <- lapply(cites, utils::toBibtex)
-  
+
   # generate reference key
   for (i in seq_len(length(cites.bib))) {
     cites.bib[[i]] <-
@@ -173,13 +175,13 @@ cite_pkg <- function(pkg_list) {
         x = cites.bib[[i]]
       )
   }
-  
+
   # write bibtex references to file
   writeLines(enc2utf8(unlist(cites.bib)), con = "manuscript/sources/pkg-refs.bib", useBytes = TRUE)
-  
+
   # return named list of bibtex references
   names(cites.bib) <- packages # pkgs
-  
+
   writeLines(paste("- ", names(cites.bib), " [@", names(cites.bib), "]", sep = ""))
 }
 
