--- a/inst/template/full/main-script.Rmd
+++ b/inst/template/full/main-script.Rmd
@@ -26,61 +26,29 @@ bibliography:
 - manuscript/sources/installed-r-packages.bib
 ---
 
-
-
-```{r setup, include=FALSE}
+```{r setup}
 knitr::opts_chunk$set(echo = TRUE)
-# http://stackoverflow.com/questions/28894515/rmarkdown-directing-output-file-into-a-directory
-out_dir <- 'manuscript'
-if(!file.exists(out_dir)) {
-  dir.create(out_dir)
+if (!require("here")) install.packages("here")
+```
+
+```{r analysis, child = "R/analysis.Rmd", eval = TRUE}
+
+```
+
+```{r caption_functions}
+table_cap <- captioner(prefix = "Table")
+
+table_ref <- function(label) {
+  stringr::str_extract(label, "[^:]*")
+}
+
+figure_cap <- captioner(prefix = "Figure")
+
+figure_ref <- function(label) {
+  stringr::str_extract(label, "[^:]*")
 }
 ```
 
-
-
-```{r r_packages, include = FALSE}
-# ipak function: install and load multiple R packages.
-# Check to see if packages are installed.
-# Install them if they are not, then load them into the R session.
-# https://gist.github.com/stevenworthington/3178163
-
-ipak <- function(pkg){
-    new.pkg <- pkg[!(pkg %in% installed.packages()[, "Package"])]
-    if (length(new.pkg))
-    {
-      install.packages(new.pkg,
-                       dependencies = TRUE,
-                       repos = "https://cloud.r-project.org")
-    }
-    suppressPackageStartupMessages(sapply(pkg, require, character.only = TRUE))
-}
-
-ipak(packages_list <- c(
-                       "devtools",  # required; do not exclude from this list
-                       "bibtex",    # required; do not exclude from this list
-                       "knitr",     # required; do not exclude from this list
-                       "rmarkdown", # required; do not exclude from this list
-                       "pacman",    # required; do not exclude from this list
-                       "captioner", # required; do not exclude from this list
-                       "git2r"      # required; do not exclude from this list
-                      )
-     )
-
-pacman::p_load_gh(char = c(
-                           # required; do not exclude from this list
-                           "benmarwick/wordcountaddin",
-                           # required; do not exclude from this list
-                           "ropensci/rcrossref"
-                           ),
-                  install = TRUE,
-                  dependencies = TRUE)
-
-write.bib(packages_list, "manuscript/sources/installed-r-packages.bib")
-
-fig <- captioner(prefix ="Figure")
-tab <- captioner(prefix="Table")
-```
 
 # Abstract
 
@@ -90,7 +58,7 @@ Lá-lá-lá
 
 \pagebreak
 
-# Intro
+# Introduction
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -101,7 +69,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \pagebreak
 
-# M & M
+# Material and Methods
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -148,33 +116,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 # R packages
 
 ```{r eval = TRUE, echo = FALSE, results='asis'}
-cite_pkg <- function(pkg_list) {
-
-  packages <- sort(pkg_list)
-  cites <- lapply(packages, utils::citation)
-  cites.bib <- lapply(cites, utils::toBibtex)
-
-  # generate reference key
-  for (i in seq_len(length(cites.bib))) {
-    cites.bib[[i]] <-
-      sub(
-        pattern = "\\{,$",
-        replacement = paste0("{", packages[i], ","),
-        x = cites.bib[[i]]
-      )
-  }
-
-  # write bibtex references to file
-  writeLines(enc2utf8(unlist(cites.bib)), con = "manuscript/sources/pkg-refs.bib", useBytes = TRUE)
-
-  # return named list of bibtex references
-  names(cites.bib) <- packages # pkgs
-
-  writeLines(paste("- ", names(cites.bib), " [@", names(cites.bib), "]", sep = ""))
-}
-
-
-cite_pkg(packages_list)
+cite_pkg(pkg_list)
 ```
 
 \pagebreak
@@ -189,11 +131,13 @@ cite_pkg(packages_list)
 
 # Tables
 
+# TODO: add flextable here
+
 <!-- https://datascienceplus.com/r-markdown-how-to-number-and-reference-tables/ -->
 
 
 ```{r, eval=TRUE, echo=FALSE, results='asis'}
-cat(tab(name = "tab_exemplo", "Apenas um exempĺo de como aplicar a legenda em uma tabela."))
+cat(table_cap(name = "tab_exemplo", "Apenas um exempĺo de como aplicar a legenda em uma tabela."))
 knitr::kable(x = head(mtcars), format = "markdown", align = "c")
 ```
 
@@ -203,7 +147,7 @@ knitr::kable(x = head(mtcars), format = "markdown", align = "c")
 
 ```{r, echo=FALSE, eval=TRUE, results='asis', fig.height=10, fig.width=10}
 plot(1:10, pch = 21, bg = "red")
-cat("\n", fig(name = "fig_exemplo", "Apenas um exemplo de como aplicar a legenda em um figura."))
+cat("\n", figure_cap(name = "fig_exemplo", "Apenas um exemplo de como aplicar a legenda em um figura."))
 ```
 
 \pagebreak
@@ -220,11 +164,13 @@ include_graphics(path = "pasta/da/minha/figura", dpi = "2in")
 
 \pagebreak
 
-Word count by *wordcountaddin* package
+<!-- Word count by *wordcountaddin* package 
 
 ```{r, echo=TRUE, eval=TRUE, message=FALSE}
 wordcountaddin::text_stats(filename = "main-script.Rmd")
 ```
+
+-->
 
 \pagebreak
 
