prevent output in analysis.Rmd

--- a/inst/template/full/R/analysis.Rmd
+++ b/inst/template/full/R/analysis.Rmd
@@ -2,7 +2,8 @@
 title: analysis
 ---
 
-```{r}
+
+```{r, include=FALSE}
 source(here("R", "local_functions.R"))
 source(here("R", "package_list.R"))
 ```
