update support files

--- a/inst/template/full/todo.txt
+++ b/inst/template/full/todo.txt
@@ -1,1 +1,19 @@
-- [ ] edit .tmuxinator.yml file
+## BACKLOG
+
+- ICEBOX
+    > Someday, maybe, that data...
+    * [ ] see cool_paper.pdf
+
+## TODO
+
+- edit `.tmuxinator.yml`
+- run `ctags -R --exclude=@.ctagsignore`
+
+## DOING
+
+
+## WAITING
+
+
+## DONE
+
