--- a/TODO
+++ b/TODO
@@ -1,9 +1,8 @@
 ☐ check package using `{goodpractice}`
-☐ improve tables and figures captions workflow - maybe with flextable  
+☐ improve tables and figures captions workflow - maybe with flextable
 ☐ clean up ref analysis
 ☐ add criticmarkup in pre/post commit hooks
 ☐ add tests!
 ☐ write vignette how to use; including `usethis::use_github()`
 ☐ write vignette about workflow with `setup_wdiff()`
-
-
+☐ knitr with params: https://twitter.com/EmilyRiederer/status/1262738071952523264?s=20
