--- a/README.Rmd
+++ b/README.Rmd
@@ -33,46 +33,29 @@ To use the full workflow of the `{minimalTemplate}`, follow the steps below:
 
 Set a new template using:
 
-``` r
-setup_template("ms_chap_01")
+```{r}
+# load minimalTemplate
+library(minimalTemplate)
+
+# create a temporary directory (for a demo proposal only)
+tmp_proj <- file.path(tempdir(), "ms_chap_01")
+
+# run `setup_template()`
+setup_template(tmp_proj)
 ```
 
 The above line will open a new [RStudio project](https://support.rstudio.com/hc/en-us/articles/200526207-Using-Projects).
 
 The folder structure of the `ms_chap_01` project is (*this is not a mandatory structure*):
 
+```{r, eval=TRUE, echo=FALSE, message=FALSE}
+if (!require("fs")) install.packages("fs")
+fs::dir_tree(path = tmp_proj, recurse = TRUE)
 ```
-ms_chap_01/
 
-├── Makefile
-├── R
-│   ├── README.md
-│   ├── analysis.Rmd
-│   ├── local_functions.R
-│   ├── package_list.R
-│   └── utils.R
-├── README.md
-├── data
-│   ├── clean
-│   ├── raw
-│   └── temp
-├── main-script.Rmd
-├── manuscript
-│   └── sources
-│       ├── analyse-refs.Rmd
-│       ├── clean-bib-file-bibtool.sh
-│       ├── criticmarkup.lua
-│       ├── ecology-letters.csl
-│       ├── library.bib
-│       ├── source-config-bibtool.rsc
-│       └── template.docx
-└── output
-    ├── figures
-    └── results
-```
+You can use the various README files distributed by the subdirectories to explain what these folders contain.
 
 Open the `main_script.Rmd` file and press the `Knit` button.
-
 
 ### 2. Download a new citation style
 
