--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ Set a new template using:
 library(minimalTemplate)
 
 # create a temporary directory (for a demo proposal only)
-tmp_proj <- file.path(tempdir(), "ms_chap_01")
+tmp_proj <- file.path(tempdir(), "awesome-manuscript")
 
 # run `setup_template()`
 setup_template(tmp_proj)
@@ -46,14 +46,12 @@ setup_template(tmp_proj)
 
 The above line will open a new [RStudio project](https://support.rstudio.com/hc/en-us/articles/200526207-Using-Projects).
 
-The folder structure of the `ms_chap_01` project is (*this is not a mandatory structure*):
+The folder structure of the `awesome-project` project is (*this is not a mandatory structure*):
 
 ```{r, eval=TRUE, echo=FALSE, message=FALSE}
 if (!require("fs")) install.packages("fs")
-fs::dir_tree(path = tmp_proj, recurse = TRUE)
+fs::dir_tree(path = tmp_proj, recurse = TRUE, all = TRUE)
 ```
-
-You can edit the various README files distributed among the subdirectories to explain what these folders contain.
 
 Open the `main_script.Rmd` file and press the `Knit` button.
 
