--- a/inst/template/full/manuscript/sources/installed-r-packages.bib
+++ b/inst/template/full/manuscript/sources/installed-r-packages.bib
@@ -22,20 +22,95 @@
   url = {https://CRAN.R-project.org/package=captioner},
 }
 
-@Manual{devtools,
-  title = {devtools: Tools to Make Developing R Packages Easier},
-  author = {Hadley Wickham and Jim Hester and Winston Chang},
-  year = {2020},
-  note = {R package version 2.3.0},
-  url = {https://CRAN.R-project.org/package=devtools},
+@Manual{conflicted,
+  title = {conflicted: An Alternative Conflict Resolution Strategy},
+  author = {Hadley Wickham},
+  year = {2019},
+  note = {R package version 1.0.4},
+  url = {https://CRAN.R-project.org/package=conflicted},
 }
 
-@Manual{git2r,
-  author = {Stefan Widgren and others},
-  title = {{git2r}: Provides Access to Git Repositories},
+@Manual{cowplot,
+  title = {cowplot: Streamlined Plot Theme and Plot Annotations for 'ggplot2'},
+  author = {Claus O. Wilke},
   year = {2020},
-  note = {R package version 0.27.1},
-  url = {https://CRAN.R-project.org/package=git2r},
+  note = {R package version 1.1.0},
+  url = {https://CRAN.R-project.org/package=cowplot},
+}
+
+@Manual{crayon,
+  title = {crayon: Colored Terminal Output},
+  author = {Gábor Csárdi},
+  year = {2017},
+  note = {R package version 1.3.4},
+  url = {https://CRAN.R-project.org/package=crayon},
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2020},
+  note = {R package version 0.8.5},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2020},
+  note = {R package version 0.5.0},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Manual{fs,
+  title = {fs: Cross-Platform File System Operations Based on 'libuv'},
+  author = {Jim Hester and Hadley Wickham},
+  year = {2020},
+  note = {R package version 1.4.2},
+  url = {https://CRAN.R-project.org/package=fs},
+}
+
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org},
+}
+
+@Manual{ggsn,
+  title = {ggsn: North Symbols and Scale Bars for Maps Created with 'ggplot2' or
+'ggmap'},
+  author = {Oswaldo {Santos Baquero}},
+  year = {2019},
+  note = {R package version 0.5.0},
+  url = {https://CRAN.R-project.org/package=ggsn},
+}
+
+@Manual{glue,
+  title = {glue: Interpreted String Literals},
+  author = {Jim Hester},
+  year = {2020},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=glue},
+}
+
+@Manual{grid,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2020},
+  url = {https://www.R-project.org/},
+}
+
+@Manual{gridExtra,
+  title = {gridExtra: Miscellaneous Functions for "Grid" Graphics},
+  author = {Baptiste Auguie},
+  year = {2017},
+  note = {R package version 2.3},
+  url = {https://CRAN.R-project.org/package=gridExtra},
 }
 
 @Manual{here,
@@ -76,13 +151,36 @@
   url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
-@Manual{pacman,
-  title = {{pacman}: {P}ackage Management for {R}},
-  author = {Tyler W. Rinker and Dason Kurkiewicz},
-  address = {Buffalo, New York},
-  note = {version 0.5.0},
+@Manual{magick,
+  title = {magick: Advanced Graphics and Image-Processing in R},
+  author = {Jeroen Ooms},
+  year = {2020},
+  note = {R package version 2.4.0},
+  url = {https://CRAN.R-project.org/package=magick},
+}
+
+@Manual{purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
+  year = {2019},
+  note = {R package version 0.3.3},
+  url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Manual{RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+}
+
+@Manual{readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
   year = {2018},
-  url = {http://github.com/trinker/pacman},
+  note = {R package version 1.3.1},
+  url = {https://CRAN.R-project.org/package=readr},
 }
 
 @Manual{rmarkdown1,
@@ -103,15 +201,48 @@
   url = {https://bookdown.org/yihui/rmarkdown},
 }
 
-@Article{tidyverse,
-  title = {Welcome to the {tidyverse}},
-  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+@Article{sf,
+  author = {Edzer Pebesma},
+  title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+  year = {2018},
+  journal = {{The R Journal}},
+  doi = {10.32614/RJ-2018-009},
+  url = {https://doi.org/10.32614/RJ-2018-009},
+  pages = {439--446},
+  volume = {10},
+  number = {1},
+}
+
+@Manual{stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
   year = {2019},
-  journal = {Journal of Open Source Software},
-  volume = {4},
-  number = {43},
-  pages = {1686},
-  doi = {10.21105/joss.01686},
+  note = {R package version 1.4.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2020},
+  note = {R package version 3.0.0},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{tidyr,
+  title = {tidyr: Tidy Messy Data},
+  author = {Hadley Wickham and Lionel Henry},
+  year = {2020},
+  note = {R package version 1.1.0},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{tiff,
+  title = {tiff: Read and write TIFF images},
+  author = {Simon Urbanek},
+  year = {2013},
+  note = {R package version 0.1-5},
+  url = {https://CRAN.R-project.org/package=tiff},
 }
 
 @Manual{usethis,
@@ -120,4 +251,12 @@
   year = {2020},
   note = {R package version 1.6.1},
   url = {https://CRAN.R-project.org/package=usethis},
+}
+
+@Manual{vegan,
+  title = {vegan: Community Ecology Package},
+  author = {Jari Oksanen and F. Guillaume Blanchet and Michael Friendly and Roeland Kindt and Pierre Legendre and Dan McGlinn and Peter R. Minchin and R. B. O'Hara and Gavin L. Simpson and Peter Solymos and M. Henry H. Stevens and Eduard Szoecs and Helene Wagner},
+  year = {2019},
+  note = {R package version 2.5-6},
+  url = {https://CRAN.R-project.org/package=vegan},
 }
