--- a/inst/template/full/manuscript/sources/library.bib
+++ b/inst/template/full/manuscript/sources/library.bib
@@ -1,3 +1,12 @@
+@Manual{rcore,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2020},
+    url = {https://www.R-project.org/},
+  }
+
 @article{Vellend2001,
 author = {Vellend, Mark},
 journal = {Journal of Vegetation Science},
