--- a/inst/template/full/todo.txt
+++ b/inst/template/full/todo.txt
@@ -7,8 +7,8 @@
 - edit the `.travis.yml` file
     > on top of the file, change the word USER in the DOCKERHUB_USERNAME variable by your DockerHub username
 - create a Git repository for your current project
-- knit (compile) the `main-script.Rmd` file
-- add, commit, and push the changes to your Git remote repository
+- knit (compile) the `main-script.Rmd` file: you can use `devtools::load_all(); render_manuscript()`
+- stage, commit, and push the changes to your Git remote repository
 - add your DockerHub password as DOCKERHUB_PASSWORD environment variable in Travis CI
 
 ## DOING
