--- a/inst/template/full/R/analysis.Rmd
+++ b/inst/template/full/R/analysis.Rmd
@@ -13,6 +13,7 @@ params:
   show_results: FALSE
 output:
   html_document:
+    keep_md: true
     toc: true
     toc_float: true
     highlight: tango
